طراحی اولیه جاوا اسکریپپت

--- a/src/index.html
+++ b/src/index.html
@@ -8,127 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="samples">
-        <div class="sample-box">
-          <img src="./img/1.png" alt="" class="sample" />
-        </div>
-        <div class="sample-box">
-          <img src="./img/1.png" alt="" class="sample" />
-        </div>
-        <div class="sample-box">
-          <img src="./img/2.png" alt="" class="sample" />
-        </div>
-      </div>
-      <div class="puzzle">
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/4.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/3.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/2.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/6.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/8.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/7.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/7.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/6.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/2.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/4.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/8.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/7.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/8.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/6.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/4.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/4.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/2.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/1.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/3.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/6.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/5.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/4.png" alt="" class="item" />
-        </div>
-        <div class="item-box">
-          <img src="./img/3.png" alt="" class="item" />
-        </div>
-      </div>
+      <div class="samples"></div>
+      <div class="puzzle"></div>
       <div class="score">
         <!-- <div class="timer">
         <svg class="timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
