--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,34 @@
       <div class="samples"></div>
       <div class="puzzle"></div>
       <div class="score">
-        <!-- <div class="timer">
-        <svg class="timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <g class="timer-ring">
-            <circle class="timer__path-elapsed" cx="50" cy="50" r="45" />
-            <path id="timer-path-remaining" stroke-dasharray="283" class="timer__path-remaining ${remainingPathColor}" d=" M 50, 50
-                      m -45, 0
-                      a 45,45 0 1,0 90,0
-                      a 45,45 0 1,0 -90,0"></path>
-          </g>
-        </svg>
-        <span class="timer-number">50</span>
-      </div> -->
+        <div class="timer">
+          <svg
+            class="timer__svg"
+            viewBox="0 0 100 100"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g class="timer__circle">
+              <circle
+                class="timer__path-elapsed"
+                cx="50"
+                cy="50"
+                r="45"
+              ></circle>
+              <path
+                id="timer-path-remaining"
+                stroke-dasharray="283"
+                class="timer__path-remaining remain"
+                d="
+                  M 50, 50
+                  m -45, 0
+                  a 45,45 0 1,0 90,0
+                  a 45,45 0 1,0 -90,0
+                "
+              ></path>
+            </g>
+          </svg>
+          <span id="timer-label" class="timer__label"></span>
+        </div>
 
         <div class="correct">
           <span class="correct__number">0</span>
