--- a/src/index.html
+++ b/src/index.html
@@ -48,34 +48,111 @@
           <span class="wrong__number">0</span>
           <h3>نادرست</h3>
         </div>
+        <div class="total">
+          <span class="total__number">0</span>
+          <h3>امتیاز</h3>
+        </div>
       </div>
       <div class="puzzle"></div>
       <div class="samples"></div>
     </div>
-    <label for="popup" style="color: white;">راهنما</label>
+    <div class="help" style="color: white;">راهنما</div>
 
     <input type="checkbox" name="poup" id="popup" />
     <div class="popup__backdrop">
-      <div class="popup">
-        <div class="popup__top">
-          <div class="popup__icon"></div>
-          <h2 class="popup__title">مربع های جهت دار</h2>
-          <label for="popup">x</label>
+      <div class="popups popup-menu">
+
+        <div class="popup hide" id="popup__score">
+          <div class="popup__top">
+            <div class="popup__icon"></div>
+            <h2 class="popup__title">مربع های جهت دار</h2>
+            <label class="popup__close" for="popup"></label>
+          </div>
+          <div class="popup__text">
+            <div>امتیاز شما: <span class="popup__score__score"></span></div>
+            <div>بیش ترین امتیاز: <span class="popup__score__max"></span></div>
+          </div>
+          <div class="popup__bottom">
+            <button class="button popup__play">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#play-button" />
+              </svg>
+              <div class="button__label">شروع</div>
+            </button>
+            <button class="button popup__how">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#question" />
+              </svg>
+              <div class="button__label">نمایش رتبه</div>
+            </button>
+          </div>
         </div>
-        <p class="popup__text">
-          این بازی به افزایش <b>توجه انتخابی</b> شما کمک می‌کند. افزایش
-          <b>توجه انتخابی</b> به شما کمک می‌کند تا زودتر از بین اشیاء مختلف و
-          شبیه به هم، مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید.
-        </p>
-        <div class="popup__bottom">
-          <button class="popup__play">شروع</button>
-          <button class="popup__how">بازی چطوریه</button>
+
+        <div class="popup" id="popup__menu">
+          <div class="popup__top">
+            <div class="popup__icon"></div>
+            <h2 class="popup__title">مربع های جهت دار</h2>
+            <label class="popup__close" for="popup"></label>
+          </div>
+          <p class="popup__text">
+            این بازی به افزایش <b>توجه انتخابی</b> شما کمک می‌کند. افزایش
+            <b>توجه انتخابی</b> به شما کمک می‌کند تا زودتر از بین اشیاء مختلف و
+            شبیه به هم، مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه
+            به هم، مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه به هم،
+            مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه به هم، مواردی
+            که خصوصیات مد نظر شما را دارند، پیدا کنید.
+          </p>
+          <div class="popup__bottom">
+            <button class="button popup__play">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#play-button" />
+              </svg>
+              <div class="button__label">شروع</div>
+            </button>
+            <button class="button popup__how">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#question" />
+              </svg>
+              <div class="button__label">بازی چطوریه</div>
+            </button>
+          </div>
         </div>
+
+        <div class="popup hide" id="popup__how">
+          <div class="popup__top">
+            <div class="popup__icon"></div>
+            <h2 class="popup__title">مربع های جهت دار</h2>
+            <label class="popup__close" for="popup"></label>
+          </div>
+          <p class="popup__text">
+            سه تا علامت توی سمت چپ تصویر براتون نمایش داده میشه. اون شکل‌ها رو
+            از بین علامت‌های دیگه پیدا کنید...
+          </p>
+          <div class="popup__bottom">
+            <button class="button popup__play">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#play-button" />
+              </svg>
+              <div class="button__label">شروع</div>
+            </button>
+            <button class="button popup__how">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#question" />
+              </svg>
+              <div class="button__label">بازگشت</div>
+            </button>
+          </div>
         </div>
+
+      </div>
     </div>
 
     <div class="popup-logo">
-      <img class="logo" src="./img/logo2.png" alt="موسسه هدایت فراگیر استعداد های برتر">
+      <img
+        class="logo"
+        src="./img/logo2.png"
+        alt="موسسه هدایت فراگیر استعداد های برتر"
+      />
     </div>
   </body>
 </html>
