--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,18 @@
           <span class="wrong__number">0</span>
           <h3>نادرست</h3>
         </div>
+
         <div class="total">
           <span class="total__number">0</span>
           <h3>امتیاز</h3>
         </div>
       </div>
+
       <div class="puzzle"></div>
       <div class="samples"></div>
       <div class="help">
         <svg class="icon">
-          <use xlink:href="./img/sprite.svg#lamp" />
+          <use xlink:href="./img/sprite.svg#home" />
         </svg>
       </div>
       <div class="mute">
@@ -76,12 +78,14 @@
           <label class="popup__close" for="check__menu"></label>
         </div>
         <p class="popup__text">
-          این بازی به افزایش <b>توجه انتخابی</b> شما کمک می‌کند. افزایش
-          <b>توجه انتخابی</b> به شما کمک می‌کند تا زودتر از بین اشیاء مختلف و
-          شبیه به هم، مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه به
-          هم، مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه به هم،
-          مواردی که خصوصیات مد نظر شما را دارند، پیدا کنید. شبیه به هم، مواردی
-          که خصوصیات مد نظر شما را دارند، پیدا کنید.
+          احتمالا موقع خوندن یه کتاب یا یه کاری که نیاز به تمرکز داره، براتون
+          پیش اومده که صدای تلویزیون، سر و صدای ماشینای توی خیابون و... نذاره که
+          کارتون رو درست انجام بدید. شاید نتونید خیلی از عواملی که مزاحم دقت و
+          توجه شما روی کارتون میشه رو حذف کنید. اما می‌تونید با تقویت
+          <b>"توجه انتخابیِ"</b>
+          خودتون، اون عوامل رو نادیده بگیرید. بازی مربع‌های جهت‌دار یه تمرین
+          ساده برای افزایش توجه انتخابی شماست. ایده‌ی این بازی از آزمون
+          تولوز-پیرون گرفته شده که برای سنجش "دقت" طراحی شده...
         </p>
         <div class="popup__bottom">
           <label class="button popup__play" for="check__menu">
@@ -134,41 +138,11 @@
           <svg class="popup__icon">
             <use xlink:href="./img/sprite.svg#check" />
           </svg>
-          <h2 class="popup__title">تبریک، شما تمامی مربع ها را پیدا کردید</h2>
+          <h2 class="popup__title">کارِت خوب بود</h2>
           <label class="popup__close" for="check__score"></label>
         </div>
 
         <div class="popup__body">
-          <div class="popup__score__item popup__score__score">
-            <div class="timer">
-              <svg
-                class="timer__svg"
-                viewBox="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g class="timer__circle">
-                  <circle
-                    class="timer__path-elapsed"
-                    cx="50"
-                    cy="50"
-                    r="45"
-                  ></circle>
-                  <path
-                    id="timer-path-remaining"
-                    stroke-dasharray="283"
-                    class="timer__path-remaining remain"
-                    d="M 50, 50
-                    m -45, 0
-                    a 45,45 0 1,0 90,0
-                    a 45,45 0 1,0 -90,0"
-                  ></path>
-                </g>
-              </svg>
-              <span id="timer-label" class="timer__label"></span>
-            </div>
-            <h3>امتیاز</h3>
-          </div>
-
           <div class="popup__score__item popup__score__max">
             <div class="timer">
               <svg
@@ -197,6 +171,36 @@
               <span id="timer-label" class="timer__label"></span>
             </div>
             <h3>بیش ترین امتیاز</h3>
+          </div>
+
+          <div class="popup__score__item popup__score__score">
+            <div class="timer">
+              <svg
+                class="timer__svg"
+                viewBox="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g class="timer__circle">
+                  <circle
+                    class="timer__path-elapsed"
+                    cx="50"
+                    cy="50"
+                    r="45"
+                  ></circle>
+                  <path
+                    id="timer-path-remaining"
+                    stroke-dasharray="283"
+                    class="timer__path-remaining remain"
+                    d="M 50, 50
+                              m -45, 0
+                              a 45,45 0 1,0 90,0
+                              a 45,45 0 1,0 -90,0"
+                  ></path>
+                </g>
+              </svg>
+              <span id="timer-label" class="timer__label timer__label--score"></span>
+            </div>
+            <h3>امتیاز</h3>
           </div>
 
           <div class="popup__score__item popup__score__time">
@@ -238,6 +242,8 @@
             <span class="wrong__number">0</span>
             <h3>نادرست</h3>
           </div>
+
+          <label class="popup__score__solution btn-second" for="check__score">نمایش پاسخ</label>
         </div>
 
         <div class="popup__bottom">
@@ -290,6 +296,10 @@
         src="./img/logo2.png"
         alt="موسسه هدایت فراگیر استعداد های برتر"
       />
+    </div>
+
+    <div class="popup__backdrop popup--start">
+      <h1 class="timer-restart">3</h1>
     </div>
   </body>
 </html>
