طرح اولیه ی راهنما

--- a/src/index.html
+++ b/src/index.html
@@ -79,13 +79,15 @@
         </div>
         <p class="popup__text">
           احتمالا موقع خوندن یه کتاب یا یه کاری که نیاز به تمرکز داره، براتون
-          پیش اومده که صدای تلویزیون، سر و صدای ماشینای توی خیابون و... نذاره که
-          کارتون رو درست انجام بدید. شاید نتونید خیلی از عواملی که مزاحم دقت و
-          توجه شما روی کارتون میشه رو حذف کنید. اما می‌تونید با تقویت
+          پیش اومده که صدای تلویزیون، سر و صدای ماشین های توی خیابون و... نذاره
+          که کارتون رو درست انجام بدید. شاید نتونید خیلی از عواملی که مزاحم دقت
+          و توجه شما روی کارتون میشه رو حذف کنید. اما می‌تونید با تقویت
           <b>"توجه انتخابیِ"</b>
           خودتون، اون عوامل رو نادیده بگیرید. بازی مربع‌های جهت‌دار یه تمرین
           ساده برای افزایش توجه انتخابی شماست. ایده‌ی این بازی از آزمون
-          تولوز-پیرون گرفته شده که برای سنجش "دقت" طراحی شده...
+          تولوز-پیرون گرفته شده که برای سنجش "دقت" طراحی شده... این بازی قابلیت
+          تشخیص شانسی پیدا کردن نشانه ها را داره. پس سعی نکنید با شانسی زدن
+          امتیاز بالا بگیرید.
         </p>
         <div class="popup__bottom">
           <label class="button popup__play" for="check__menu">
@@ -110,9 +112,19 @@
             <label class="popup__close" for="check__menu"></label>
           </div>
           <p class="popup__text">
-            سه تا علامت توی سمت چپ تصویر براتون نمایش داده میشه. اون شکل‌ها رو
-            از بین علامت‌های دیگه پیدا کنید...
+            در این بازی سه نشانه به شما نمایش داده می شود و شما باید در زمان
+            تعیین شده این نشانه ها را پیدا کنید. زمان در این بازی مهم است و
+            امتیاز آن در پایان بازی به مجموع امتیازات شما اضافه می شود. درقسمت
+            دیگر صفحه، تابلوی امتیازات قرار دارد. در قسمت پایین صفحه دکمه های
+            خانه و تنظیمات صدا قرار دارد. با زدن روی دکمه خانه صفحه معرفی بازی
+            یا مشاهده نتیجه باز می شود.
           </p>
+
+          <input type="checkbox" name="popup" id="check__help" />
+          <label class="popup__help btn-second" for="check__help">
+            راهنمایی بیش تر
+          </label>
+          <div class="help__page"></div>
           <div class="popup__bottom">
             <label class="button popup__play" for="check__menu">
               <svg class="button__icon">
@@ -198,7 +210,10 @@
                   ></path>
                 </g>
               </svg>
-              <span id="timer-label" class="timer__label timer__label--score"></span>
+              <span
+                id="timer-label"
+                class="timer__label timer__label--score"
+              ></span>
             </div>
             <h3>امتیاز</h3>
           </div>
@@ -243,7 +258,9 @@
             <h3>نادرست</h3>
           </div>
 
-          <label class="popup__score__solution btn-second" for="check__score">نمایش پاسخ</label>
+          <label class="popup__score__solution btn-second" for="check__score">
+            نمایش پاسخ
+          </label>
         </div>
 
         <div class="popup__bottom">
