بخش اول تغییرات

--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
                     r="45"
                   ></circle>
                   <path
-                    class="timer__path-remaining timer__coler__remain"
+                    class="timer__path-remaining timer__color__remain"
                     stroke-dasharray="283"
                     d="M 50, 50
                         m -45, 0
