--- a/src/index.html
+++ b/src/index.html
@@ -72,41 +72,43 @@
 
     <input type="checkbox" name="popup" id="check__menu" />
     <div class="popup__backdrop">
-      <div class="popup popup--main" id="popup__menu">
-        <div class="popup__top">
-          <div class="popup__logo"></div>
-          <h2 class="popup__title">مربع های جهت دار</h2>
-          <label class="popup__close" for="check__menu"></label>
+      <div class="popup" id="popup__menu">
+        <div class="popup--main">
+          <div class="popup__top">
+            <div class="popup__logo"></div>
+            <h2 class="popup__title">مربع های جهت دار</h2>
+            <label class="popup__close" for="check__menu"></label>
+          </div>
+          <p class="popup__text">
+            احتمالا موقع خوندن یه کتاب یا یه کاری که نیاز به تمرکز داره، براتون
+            پیش اومده که صدای تلویزیون، سر و صدای ماشین های توی خیابون و...
+            نذاره که کارتون رو درست انجام بدید. شاید نتونید خیلی از عواملی که
+            مزاحم دقت و توجه شما روی کارتون میشه رو حذف کنید. اما می‌تونید با
+            تقویت
+            <b>"توجه انتخابیِ"</b>
+            خودتون، اون عوامل رو نادیده بگیرید. بازی مربع‌های جهت‌دار یه تمرین
+            ساده برای افزایش توجه انتخابی شماست. ایده‌ی این بازی از آزمون
+            تولوز-پیرون گرفته شده که برای سنجش "دقت" طراحی شده... این بازی
+            قابلیت تشخیص شانسی پیدا کردن نشانه ها را داره. پس سعی نکنید با شانسی
+            زدن امتیاز بالا بگیرید.
+          </p>
+          <div class="popup__bottom">
+            <label class="button popup__play" for="check__menu">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#play-button" />
+              </svg>
+              <div class="button__label">شروع</div>
+            </label>
+            <label class="button popup__how" for="check__how">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#question" />
+              </svg>
+              <div class="button__label">بازی چطوریه</div>
+            </label>
+          </div>
         </div>
-        <p class="popup__text">
-          احتمالا موقع خوندن یه کتاب یا یه کاری که نیاز به تمرکز داره، براتون
-          پیش اومده که صدای تلویزیون، سر و صدای ماشین های توی خیابون و... نذاره
-          که کارتون رو درست انجام بدید. شاید نتونید خیلی از عواملی که مزاحم دقت
-          و توجه شما روی کارتون میشه رو حذف کنید. اما می‌تونید با تقویت
-          <b>"توجه انتخابیِ"</b>
-          خودتون، اون عوامل رو نادیده بگیرید. بازی مربع‌های جهت‌دار یه تمرین
-          ساده برای افزایش توجه انتخابی شماست. ایده‌ی این بازی از آزمون
-          تولوز-پیرون گرفته شده که برای سنجش "دقت" طراحی شده... این بازی قابلیت
-          تشخیص شانسی پیدا کردن نشانه ها را داره. پس سعی نکنید با شانسی زدن
-          امتیاز بالا بگیرید.
-        </p>
-        <div class="popup__bottom">
-          <label class="button popup__play" for="check__menu">
-            <svg class="button__icon">
-              <use xlink:href="./img/sprite.svg#play-button" />
-            </svg>
-            <div class="button__label">شروع</div>
-          </label>
-          <label class="button popup__how" for="check__how">
-            <svg class="button__icon">
-              <use xlink:href="./img/sprite.svg#question" />
-            </svg>
-            <div class="button__label">بازی چطوریه</div>
-          </label>
-        </div>
-
         <input type="checkbox" name="popup" id="check__how" />
-        <div class="popup popup--back" id="popup__how">
+        <div class="popup--back" id="popup__how">
           <div class="popup__top">
             <div class="popup__logo"></div>
             <h2 class="popup__title">مربع های جهت دار</h2>
@@ -120,10 +122,10 @@
             خانه و تنظیمات صدا قرار دارد. با زدن روی دکمه خانه صفحه معرفی بازی
             یا مشاهده نتیجه باز می شود.
           </p>
-
           <a class="popup__help btn-second" href="#">
             راهنمایی بیش تر
           </a>
+
           <div class="popup__bottom">
             <label class="button popup__play" for="check__menu">
               <svg class="button__icon">
@@ -144,131 +146,132 @@
 
     <input type="checkbox" name="popup" id="check__score" />
     <div class="popup__backdrop">
-      <div class="popup popup--main" id="popup__score">
-        <div class="popup__top">
-          <svg class="popup__icon">
-            <use xlink:href="./img/sprite.svg#check" />
-          </svg>
-          <h2 class="popup__title">کارِت خوب بود</h2>
-          <label class="popup__close" for="check__score"></label>
-        </div>
+      <div class="popup">
+        <div class="popup--main" id="popup__score">
+          <div class="popup__top">
+            <svg class="popup__icon">
+              <use xlink:href="./img/sprite.svg#check" />
+            </svg>
+            <h2 class="popup__title">کارِت خوب بود</h2>
+            <label class="popup__close" for="check__score"></label>
+          </div>
 
-        <div class="popup__body">
-          <div class="popup__score__item popup__score__max">
-            <div class="timer">
-              <svg
-                class="timer__svg"
-                viewBox="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g class="timer__circle">
-                  <circle
-                    class="timer__path-elapsed"
-                    cx="50"
-                    cy="50"
-                    r="45"
-                  ></circle>
-                  <path
-                    class="timer__path-remaining timer__color__remain"
-                    stroke-dasharray="283"
-                    d="M 50, 50
+          <div class="popup__body">
+            <div class="popup__score__item popup__score__max">
+              <div class="timer">
+                <svg
+                  class="timer__svg"
+                  viewBox="0 0 100 100"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g class="timer__circle">
+                    <circle
+                      class="timer__path-elapsed"
+                      cx="50"
+                      cy="50"
+                      r="45"
+                    ></circle>
+                    <path
+                      class="timer__path-remaining timer__color__remain"
+                      stroke-dasharray="283"
+                      d="M 50, 50
                         m -45, 0
                         a 45,45 0 1,0 90,0
                         a 45,45 0 1,0 -90,0"
-                  ></path>
-                </g>
-              </svg>
-              <span class="timer__label"></span>
+                    ></path>
+                  </g>
+                </svg>
+                <span class="timer__label"></span>
+              </div>
+              <h3>بیش ترین امتیاز</h3>
             </div>
-            <h3>بیش ترین امتیاز</h3>
-          </div>
 
-          <div class="popup__score__item popup__score__score">
-            <div class="timer">
-              <svg
-                class="timer__svg"
-                viewBox="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g class="timer__circle">
-                  <circle
-                    class="timer__path-elapsed"
-                    cx="50"
-                    cy="50"
-                    r="45"
-                  ></circle>
-                  <path
-                    class="timer__path-remaining timer__color__remain"
-                    stroke-dasharray="283"
-                    d="M 50, 50
+            <div class="popup__score__item popup__score__score">
+              <div class="timer">
+                <svg
+                  class="timer__svg"
+                  viewBox="0 0 100 100"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g class="timer__circle">
+                    <circle
+                      class="timer__path-elapsed"
+                      cx="50"
+                      cy="50"
+                      r="45"
+                    ></circle>
+                    <path
+                      class="timer__path-remaining timer__color__remain"
+                      stroke-dasharray="283"
+                      d="M 50, 50
                                   m -45, 0
                                   a 45,45 0 1,0 90,0
                                   a 45,45 0 1,0 -90,0"
-                  ></path>
-                </g>
-              </svg>
-              <span class="timer__label timer__label--score"></span>
+                    ></path>
+                  </g>
+                </svg>
+                <span class="timer__label timer__label--score"></span>
+              </div>
+              <h3>امتیاز</h3>
             </div>
-            <h3>امتیاز</h3>
-          </div>
 
-          <div class="popup__score__item popup__score__rank">
-            <div class="timer">
-              <svg
-                class="timer__svg"
-                viewBox="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g class="timer__circle">
-                  <circle
-                    class="timer__path-elapsed"
-                    cx="50"
-                    cy="50"
-                    r="45"
-                  ></circle>
-                  <path
-                    class="timer__path-remaining timer__color__remain"
-                    stroke-dasharray="283"
-                    d="M 50, 50
+            <div class="popup__score__item popup__score__rank">
+              <div class="timer">
+                <svg
+                  class="timer__svg"
+                  viewBox="0 0 100 100"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g class="timer__circle">
+                    <circle
+                      class="timer__path-elapsed"
+                      cx="50"
+                      cy="50"
+                      r="45"
+                    ></circle>
+                    <path
+                      class="timer__path-remaining timer__color__remain"
+                      stroke-dasharray="283"
+                      d="M 50, 50
                         m -45, 0
                         a 45,45 0 1,0 90,0
                         a 45,45 0 1,0 -90,0"
-                  ></path>
-                </g>
-              </svg>
-              <span class="timer__label"></span>
+                    ></path>
+                  </g>
+                </svg>
+                <span class="timer__label"></span>
+              </div>
+              <h3>امتیاز نفر اول</h3>
             </div>
-            <h3>امتیاز نفر اول</h3>
+
+            <div class="popup__score__item popup__score__correct">
+              <span class="popup__score__correct__number">0</span>
+              <h3>درست</h3>
+            </div>
+
+            <div class="popup__score__item popup__score__wrong">
+              <span class="popup__score__wrong__number">0</span>
+              <h3>نادرست</h3>
+            </div>
           </div>
 
-          <div class="popup__score__item popup__score__correct">
-            <span class="popup__score__correct__number">0</span>
-            <h3>درست</h3>
-          </div>
-
-          <div class="popup__score__item popup__score__wrong">
-            <span class="popup__score__wrong__number">0</span>
-            <h3>نادرست</h3>
+          <div class="popup__bottom">
+            <label class="button popup__play" for="check__score">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#play-button" />
+              </svg>
+              <div class="button__label">شروع</div>
+            </label>
+            <label class="button popup__how" for="check__rank">
+              <svg class="button__icon">
+                <use xlink:href="./img/sprite.svg#star" />
+              </svg>
+              <div class="button__label">نمایش رتبه</div>
+            </label>
           </div>
         </div>
-
-        <div class="popup__bottom">
-          <label class="button popup__play" for="check__score">
-            <svg class="button__icon">
-              <use xlink:href="./img/sprite.svg#play-button" />
-            </svg>
-            <div class="button__label">شروع</div>
-          </label>
-          <label class="button popup__how" for="check__rank">
-            <svg class="button__icon">
-              <use xlink:href="./img/sprite.svg#star" />
-            </svg>
-            <div class="button__label">نمایش رتبه</div>
-          </label>
-        </div>
-
         <input type="checkbox" name="popup" id="check__rank" />
-        <div class="popup popup--back" id="popup__rank">
+        <div class="popup--back" id="popup__rank">
           <div class="popup__top">
             <div class="popup__icon"></div>
             <h2 class="popup__title">مربع های جهت دار</h2>
